Fix height on mobile ad

--- a/assets/stylesheets/mobile-ad.css.scss
+++ b/assets/stylesheets/mobile-ad.css.scss
@@ -73,7 +73,7 @@
 	-moz-box-sizing: border-box;
 	@include vertical-center-flex;
 	img {
-		width: 20%;
+		height: 30px;
 	}
 	div {
 		width: 80%;
